<?xml version="1.0"?>
<package>
  <name>dso_ros</name>
  <version>0.0.1</version>
  <description>dso ros</description>

  <license>TODO</license>
  <maintainer email="no@one.com">No one</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>tf</run_depend>

  <export>

  </export>
</package>
